docs: overhaul README with hardware detail, diagrams, and reasoning
Break sensor node, app, backend, and dashboard out into their own
top-level sections with the actual hardware, protocols, and reasoning
behind each choice, woven into prose rather than called out separately.
Fold the Java 26 writeup into Backend, move screenshots into App, and
move the getting-started steps into their own doc.

Add three generated diagrams (architecture with a sensor hardware
breakout, BLE packet layout, and a backend pipeline that tags each
step with the Java 26 feature behind it), built from docs/icons/ via
small Pillow scripts so they're editable as code and reproducible.

Sync hardware/BOM.md's battery spec to the real 2500 mAh figure.